--- a/BubbleBobble/imgui.ini
+++ b/BubbleBobble/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=167,71
-Size=330,256
+Pos=637,175
+Size=384,429
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Example: Console]
 Pos=815,19
@@ -21,9 +22,10 @@ Size=1052,348
 Collapsed=0
 
 [Window][ExampleLayer]
-Pos=875,76
-Size=207,52
+Pos=255,175
+Size=380,429
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][DockSpace Demo]
 Size=1575,821
@@ -36,6 +38,9 @@ Size=339,701
 Collapsed=0
 
 [Docking][Data]
+DockNode    ID=0x00000002 Pos=367,310 Size=766,429 Split=X Selected=0xE927CF2F
+  DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=380,429 Selected=0x5FBA6C6F
+  DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=384,429 Selected=0xE927CF2F
 DockSpace   ID=0x3BC79352 Pos=320,176 Size=1575,802 Split=X
   DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=813,701 CentralNode=1
   DockNode  ID=0x00000006 Parent=0x3BC79352 SizeRef=465,701 Selected=0x46B5E99C
