testing branches for future development

--- a/BubbleBobble/imgui.ini
+++ b/BubbleBobble/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=637,175
-Size=384,429
+Pos=839,97
+Size=390,427
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Example: Console]
 Pos=815,19
@@ -22,13 +21,12 @@ Size=1052,348
 Collapsed=0
 
 [Window][ExampleLayer]
-Pos=255,175
-Size=380,429
+Pos=234,37
+Size=947,644
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][DockSpace Demo]
-Size=1575,821
+Size=1280,720
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
@@ -37,11 +35,25 @@ ViewportId=0x6D551092
 Size=339,701
 Collapsed=0
 
+[Window][Example: Custom rendering]
+ViewportPos=160,309
+ViewportId=0x3AC84485
+Size=466,391
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=0,19
+Size=1280,701
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockNode    ID=0x00000002 Pos=367,310 Size=766,429 Split=X Selected=0xE927CF2F
-  DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=380,429 Selected=0x5FBA6C6F
-  DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=384,429 Selected=0xE927CF2F
-DockSpace   ID=0x3BC79352 Pos=320,176 Size=1575,802 Split=X
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=813,701 CentralNode=1
+DockSpace   ID=0x3BC79352 Pos=164,206 Size=1280,701 Split=X
+  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=0,0 CentralNode=1 Selected=0x1FD64BEB
   DockNode  ID=0x00000006 Parent=0x3BC79352 SizeRef=465,701 Selected=0x46B5E99C
 
