committing last modified files not knowing where I left off

--- a/BubbleBobble/imgui.ini
+++ b/BubbleBobble/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=839,97
-Size=390,427
+Pos=603,33
+Size=390,644
 Collapsed=0
+DockId=0x00000003,1
 
 [Window][Example: Console]
 Pos=815,19
@@ -21,9 +22,10 @@ Size=1052,348
 Collapsed=0
 
 [Window][ExampleLayer]
-Pos=234,37
-Size=947,644
+Pos=603,33
+Size=390,644
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][DockSpace Demo]
 Size=1280,720
@@ -53,6 +55,7 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Docking][Data]
+DockNode    ID=0x00000003 Pos=793,246 Size=390,644 Selected=0x5FBA6C6F
 DockSpace   ID=0x3BC79352 Pos=164,206 Size=1280,701 Split=X
   DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=0,0 CentralNode=1 Selected=0x1FD64BEB
   DockNode  ID=0x00000006 Parent=0x3BC79352 SizeRef=465,701 Selected=0x46B5E99C
