Add new log system using spdlog and refactor event system

--- a/BubbleBobble/imgui.ini
+++ b/BubbleBobble/imgui.ini
@@ -15,14 +15,13 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Example: Log]
-ViewportPos=873,452
-ViewportId=0xBF126D42
+Pos=104,176
 Size=1052,348
 Collapsed=0
 
 [Window][ExampleLayer]
 Pos=234,37
-Size=947,644
+Size=264,92
 Collapsed=0
 
 [Window][DockSpace Demo]
